# LucenePlusPlus

./: .gitignore  CMakeLists.txt  README.rst  REQUESTS  find-extra-includes  wscript
src/contrib/: CMakeLists.txt
src/contrib/highlighter/: GradientFormatter.cpp  Highlighter.cpp  QueryTermExtractor.cpp  SimpleSpanFragmenter.cpp  TokenSources.cpp  WeightedSpanTermExtractor.cpp
src/contrib/include/: ArabicAnalyzer.h  ArabicLetterTokenizer.h  ArabicNormalizationFilter.h  ArabicNormalizer.h  ArabicStemFilter.h  ArabicStemmer.h  BrazilianAnalyzer.h  BrazilianStemFilter.h  BrazilianStemmer.h  CJKAnalyzer.h  CJKTokenizer.h  ChineseAnalyzer.h  ChineseFilter.h  ChineseTokenizer.h  ContribInc.h  CzechAnalyzer.h  DefaultEncoder.h  DutchAnalyzer.h  DutchStemFilter.h  DutchStemmer.h  ElisionFilter.h  Encoder.h  Formatter.h  Fragmenter.h  FrenchAnalyzer.h  FrenchStemFilter.h  FrenchStemmer.h  GermanAnalyzer.h  GermanStemFilter.h  GermanStemmer.h  GradientFormatter.h  GreekAnalyzer.h  GreekLowerCaseFilter.h  Highlighter.h  HighlighterScorer.h  LuceneContrib.h  MapWeightedSpanTerm.h  MemoryIndex.h  NullFragmenter.h  PersianAnalyzer.h  (+24 more)
src/contrib/memory/: MemoryIndex.cpp
src/contrib/snowball/: SnowballFilter.cpp
src/core/: CMakeLists.txt
src/core/analysis/: ASCIIFoldingFilter.cpp  BaseCharFilter.cpp  CharArraySet.cpp  MappingCharFilter.cpp  NumericTokenStream.cpp  StopAnalyzer.cpp  TeeSinkTokenFilter.cpp  Token.cpp  WhitespaceTokenizer.cpp  WordlistLoader.cpp
src/core/document/: AbstractField.cpp  CompressionTools.cpp  DateField.cpp  DateTools.cpp  Field.cpp  FieldSelector.cpp  NumberTools.cpp  NumericField.cpp
src/core/include/: AllTermDocs.h  ArrayReader.h  Base64.h  BooleanScorer.h  BooleanScorer2.h  BufferedDeletes.h  ByteBlockPool.h  ByteSliceReader.h  ByteSliceWriter.h  CharBlockPool.h  CharFolder.h  CompoundFileReader.h  CompoundFileWriter.h  ConjunctionScorer.h  DefaultSkipListReader.h  DefaultSkipListWriter.h  DirectoryReader.h  DisjunctionMaxScorer.h  DisjunctionSumScorer.h  DocConsumer.h  DocConsumerPerThread.h  DocFieldConsumer.h  DocFieldConsumerPerField.h  DocFieldConsumerPerThread.h  DocFieldConsumers.h  DocFieldConsumersPerField.h  DocFieldConsumersPerThread.h  DocFieldProcessor.h  DocFieldProcessorPerField.h  DocFieldProcessorPerThread.h  DocInverter.h  DocInverterPerField.h  DocInverterPerThread.h  DocumentsWriter.h  DocumentsWriterThreadState.h  DoubleFieldSource.h  ExactPhraseScorer.h  FieldCacheImpl.h  FieldDocSortedHitQueue.h  FieldInfo.h  (+139 more)
src/core/index/: AllTermDocs.cpp  ByteBlockPool.cpp  ByteSliceReader.cpp  ByteSliceWriter.cpp  CheckIndex.cpp  CompoundFileWriter.cpp  ConcurrentMergeScheduler.cpp  DefaultSkipListReader.cpp  DefaultSkipListWriter.cpp  DirectoryReader.cpp  DocFieldConsumers.cpp  DocFieldConsumersPerThread.cpp  DocFieldProcessorPerThread.cpp  DocInverter.cpp  DocInverterPerField.cpp  DocumentsWriter.cpp  FieldInfos.cpp  FieldsReader.cpp  FieldsWriter.cpp  FormatPostingsDocsWriter.cpp  FormatPostingsTermsConsumer.cpp  FreqProxFieldMergeState.cpp  FreqProxTermsWriter.cpp  IndexDeletionPolicy.cpp  IndexFileDeleter.cpp  IndexFileNameFilter.cpp  IndexFileNames.cpp  IndexReader.cpp  IndexWriter.cpp  LogByteSizeMergePolicy.cpp  LogDocMergePolicy.cpp  LogMergePolicy.cpp  MergePolicy.cpp  MultiLevelSkipListReader.cpp  MultiLevelSkipListWriter.cpp  MultiReader.cpp  MultipleTermPositions.cpp  NormsWriterPerField.cpp  ParallelReader.cpp  Payload.cpp  (+26 more)
src/core/queryparser/: FastCharStream.cpp  MultiFieldQueryParser.cpp  QueryParseError.cpp  QueryParser.cpp  QueryParserConstants.cpp  QueryParserTokenManager.cpp
src/core/search/: BooleanQuery.cpp  BooleanScorer.cpp  BooleanScorer2.cpp  CachingSpanFilter.cpp  CachingWrapperFilter.cpp  ComplexExplanation.cpp  ConstantScoreQuery.cpp  DefaultSimilarity.cpp  DocIdSet.cpp  (+52 more)
src/demo/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/analysis/: TeeSinkTokenFilterTest.cpp
test/document/: BinaryDocumentTest.cpp  DateFieldTest.cpp  DateToolsTest.cpp  DocumentTest.cpp
test/index/: AddIndexesNoOptimizeTest.cpp  AtomicUpdateTest.cpp  BackwardsCompatibilityTest.cpp  ByteSlicesTest.cpp  CompoundFileTest.cpp  ConcurrentMergeSchedulerTest.cpp  DocHelper.cpp  DocTest.cpp  IndexFileDeleterTest.cpp  IndexInputTest.cpp  IndexReaderCloneNormsTest.cpp  IndexReaderCloneTest.cpp  IndexReaderReopenTest.cpp  IndexReaderTest.cpp  IndexWriterDeleteTest.cpp  IndexWriterExceptionsTest.cpp  IndexWriterMergingTest.cpp  IndexWriterReaderTest.cpp  IndexWriterTest.cpp  LazyProxSkippingTest.cpp  NRTReaderWithThreadsTest.cpp  NormsTest.cpp  PayloadsTest.cpp  SnapshotDeletionPolicyTest.cpp  StressIndexingTest.cpp  TermDocsPerfTest.cpp  ThreadedOptimizeTest.cpp  TransactionRollbackTest.cpp  TransactionsTest.cpp
test/queryparser/: MultiAnalyzerTest.cpp  QueryParserTest.cpp
test/search/: BaseTestRangeFilterFixture.cpp  BooleanMinShouldMatchTest.cpp  BooleanPrefixQueryTest.cpp  CachingWrapperFilterTest.cpp  CheckHits.cpp  ComplexExplanationsOfNonMatchesTest.cpp  ComplexExplanationsTest.cpp  CustomSearcherSortTest.cpp  DateFilterTest.cpp  ExplanationsFixture.cpp  FieldCacheRangeFilterTest.cpp  FieldCacheTermsFilterTest.cpp  FieldCacheTest.cpp  FilteredSearchTest.cpp  MultiPhraseQueryTest.cpp  MultiSearcherTest.cpp  MultiTermConstantScoreTest.cpp  MultiThreadTermVectorsTest.cpp  MultiValuedNumericRangeQueryTest.cpp  NumericRangeQuery32Test.cpp  NumericRangeQuery64Test.cpp  ParallelMultiSearcherTest.cpp  PositionIncrementTest.cpp  QueryUtils.cpp  ScorerPerfTest.cpp  SearchForDuplicatesTest.cpp  SimpleExplanationsOfNonMatchesTest.cpp  SimpleExplanationsTest.cpp  SortTest.cpp  TermRangeFilterTest.cpp  TermRangeQueryTest.cpp  TermScorerTest.cpp  ThreadSafeTest.cpp  TimeLimitingCollectorTest.cpp  WildcardTest.cpp
test/store/: BufferedIndexInputTest.cpp  FileSwitchDirectoryTest.cpp  LockFactoryTest.cpp  MockRAMDirectory.cpp  MockRAMOutputStream.cpp  RAMDirectoryTest.cpp
test/util/: AttributeSourceTest.cpp  FieldCacheSanityCheckerTest.cpp  FileReaderTest.cpp  LuceneGlobalFixture.cpp  StringUtilsTest.cpp  TestUtils.cpp  VersionTest.cpp
(+713 files in other folders)
